--- a/src/scss/partials/_home.scss
+++ b/src/scss/partials/_home.scss
@@ -18,7 +18,7 @@
     @include media-md {
       margin-left: 0rem;
       margin-top: 2rem;
-      width: 95%;
+      width: 97%;
     }
   }
   &__heading {
